* Fix layout of view heading

--- a/src/view/css/app.css
+++ b/src/view/css/app.css
@@ -637,10 +637,9 @@ select
 /* accounts page*/
 .heading
 {
-	width: 100%;
-	padding: 10px 0px;
-	height: 32px;
 	display: flex;
+    flex-flow: row wrap;
+	padding: 10px 0px;
 }
 
 
@@ -652,14 +651,8 @@ select
 	height: 32px;
 	padding: 0;
 	margin: 0;
+    margin-right: 30px;
 	vertical-align: middle;
-}
-
-
-.heading > .iconlink
-{
-	display: inline-block;
-	margin: 0px 0px 0px 30px;
 }
 
 
